test/semantics/programs/valid/call-var-from-parent-scope.guav
# Should be able to call the x outside the if statement

x = 2

if (true) {
    y = x + 1
}
