test/semantics/programs/invalid/call-var-outside-valid-scope.guav
# Shouldn't be able to call the x outside the if statement

if (true) {
    x = 2
}

print(x)
